--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-transformer-sharp": "^2.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-animejs": "^0.5.6",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
