--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-offline": "^3.10.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
