--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "gatsby": "^2.32.3",
@@ -18,6 +20,7 @@
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-mdx": "^2.4.0",
     "gatsby-plugin-offline": "^3.10.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
