--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
